Version 3.31 - ? ? 2009, by ? ?
- clean up and bring back rpm5.org support (by Per Øyvind Karlsen)

Version 3.30 - 11 May 2009, by Christophe Fergeau

- rework public key handling since librpm behaviour has changed. It's no longer
  possible to tell it to add the same key multiple times which was causing
  weird "unable to import pubkey" messages when a mirror contains different
  pubkeys for the same key, fixes #50383

Version 3.29 - 27 March 2009, by Christophe Fergeau

- fix regression introduced by fix for bug #47803 (fix by Anssi Hannula).
  Without this patch, urpmi got stuck in an infinite loop when trying 
  to upgrade from 2008.1.

Version 3.28 - 25 March 2009, by Christophe Fergeau

- postpone user choices as much as possible to avoid asking the user
  unnecessary questions, (bug #48100, Anssi Hannula)

Version 3.27 - 24 March 2009, by Christophe Fergeau

- don't silently install suggests (bug #47934)
- fix _handle_diff_provides in case of impossible-to-satisfy selected 
  packages (bug #48223, Anssi Hannula)
- check rep for another pkg providing X if the prev pkg gets removed 
  due to a conflict (bug #47803, Anssi Hannula)

Version 3.26 - 5 March 2009, by Thierry Vignaud

- verify_signature: enable to check signatures against a chrooted rpmdb
  (especially important for installer where there's no rpmdb in / and thus no
  keys to check against)

Version 3.25 - 16 January 2009, by Christophe Fergeau

- previous fix for bug #46874 was bogus, really fix it this time

Version 3.24 - 13 January 2009, by Christophe Fergeau

- fix sorting choices on provided version (feature introduced in 3.08, 
  but was not working if packages were coming from different repository)
- when a "Requires:" can be fullfilled by several different packages and
  one of those packages is explicitly required by another package which
  is also being installed, silently choose this package instead of letting
  the choice up to perl-URPM user (fixes bug #46874)
